<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePasscode">

  <TextView
      android:id="@+id/selectedResourcesTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="Selected Resources:"
      android:textSize="18sp"
      android:padding="16dp"
      android:textStyle="bold" />

  <ListView
      android:id="@+id/selectedResourcesListView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      android:divider="@null"
      android:dividerHeight="0dp"
      android:paddingStart="16dp"
      android:paddingEnd="16dp" />

  <TextView android:id="@+id/textView"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:layout_below="@+id/selectedResourcesListView"
      android:text="@string/optionally_add_a_passcode_a_label_or_an_expiration_date" />

  <EditText
      android:id="@+id/passcode"
      android:inputType="text"
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:layout_below="@+id/textView"
      android:hint="@string/enter_passcode" />

  <EditText
      android:id="@+id/label"
      android:inputType="text"
      android:layout_width="fill_parent"
      android:layout_height="50dp"
      android:layout_below="@+id/passcode"
      android:maxLength="80"
      android:hint="@string/enter_an_optional_label" />

  <CheckBox android:id="@+id/checkboxDate"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/label"
      android:text="@string/do_you_want_to_include_an_expiration_date" />

  <DatePicker
      android:id="@+id/datePicker"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:datePickerMode="spinner"
      android:layout_below="@+id/checkboxDate"
      android:calendarViewShown="false"/>

  <Button
      android:id="@+id/generateSHL"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_centerInParent="true"
      android:layout_below="@+id/datePicker"
      android:text="@string/generate_smart_health_link" />

</RelativeLayout>

